2009-11-01  Hironori Bono  <hbono@chromium.org>

        Reviewed by Darin Adler.

        Bug 30902: Need a layout test for Bug 28284
        This change just adds a simple test that calls TextInputController.firstRectForCharacterRange()
        before and after inserting a Thai character and compare their results.
        https://bugs.webkit.org/show_bug.cgi?id=30902

        * fast/text/international/thai-cursor-position-expected.txt: Added.
        * fast/text/international/thai-cursor-position.html: Added.
        * platform/gtk/Skipped: Skip this test because TextInputController is not implemented.
        * platform/qt/Skipped: ditto.
        * platform/win/Skipped: ditto.

2009-11-01  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Darin Adler.

        Fix assertion falure in RenderObjectChildList::updateBeforeAfterContent().

        [Crash (debug)] Combination of list-item and :after causes assertion failure
        https://bugs.webkit.org/show_bug.cgi?id=30944

        * fast/css/list-item-pseudo-nocrash-expected.txt: Added.
        * fast/css/list-item-pseudo-nocrash.html: Added.

2009-11-01  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30586
        [GTK] Failing test media/video-src-empty.html

        * platform/gtk/Skipped: Unskip fixed test.

2009-10-31  Oliver Hunt  <oliver@apple.com>

        Reviewed by Jon Honeycutt.

        WebGL allows objects to be used with the wrong context
        https://bugs.webkit.org/show_bug.cgi?id=30981

        Add tests for null/missing object parameters and objects being used
        on the wrong context.

        * fast/canvas/webgl/incorrect-context-object-behaviour-expected.txt: Added.
        * fast/canvas/webgl/incorrect-context-object-behaviour.html: Added.
        * fast/canvas/webgl/null-object-behaviour-expected.txt: Added.
        * fast/canvas/webgl/null-object-behaviour.html: Added.